[package]
name = "q-bio-dsl"
version = "0.1.0"
edition = "2021"
description = "Biological programming DSL for Q-NarwhalKnight water robots"
authors = ["Q-NarwhalKnight Team"]
license = "MIT"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Math and science
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-complex = "0.4"

# Async
async-trait = "0.1"

# Parsing
logos = "0.14"
nom = "7.1"

# Chemistry
regex = "1.10"

# Cryptography
sha3 = "0.10"

# Internal dependencies
q-types = { path = "../q-types" }

[dev-dependencies]
tokio-test = "0.4"
