[package]
name = "q-bitnet-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Q-NarwhalKnight Team"]
description = "Rust FFI bindings to Microsoft BitNet for 1.58-bit LLM inference with tensor parallelism"
license = "MIT"
readme = "README.md"

[features]
default = ["pure-rust"]
# Pure Rust implementation (no C++ dependency) - for initial development
pure-rust = []
# Use actual bitnet.cpp via FFI (requires clang 18+)
ffi = ["cc", "bindgen"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Async
tokio = { version = "1.35", features = ["sync", "rt"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# SIMD for optimized ternary operations
# packed_simd is unstable, use portable-simd when stable
# For now, use manual SIMD via std::arch

# Internal dependencies
q-types = { path = "../q-types" }

[build-dependencies]
cc = { version = "1.0", optional = true }
bindgen = { version = "0.69", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Benchmarks will be added once the core implementation is stable
# [[bench]]
# name = "ternary_ops"
# harness = false
