[package]
name = "q-bounty-server"
version.workspace = true
edition.workspace = true
description = "Testnet Bounty Protocol API Server"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "q-bounty-server"
path = "src/main.rs"

[dependencies]
# Local dependencies
q-types = { path = "../q-types" }
q-bounty-protocol = { path = "../q-bounty-protocol" }
q-aegis-ql = { path = "../q-aegis-ql" }

# Web framework
axum = { workspace = true }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
clap = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Hex encoding
hex = "0.4"

# Hashing for flexible address support
sha3 = { workspace = true }

# Concurrency
parking_lot = "0.12"

# JWT authentication
jsonwebtoken = "9.2"

# Signature verification
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.21"
