[package]
name = "q-compute"
version.workspace = true
edition = "2021"
description = "Starship Endgame Revolution — 100% compute utilization orchestrator"

[features]
default = []
metrics = []

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
dashmap = "5"
crossbeam = "0.8"
core_affinity = "0.8"
sysinfo = "0.30"
num_cpus = "1"
parking_lot = "0.12"
q-ai-inference = { path = "../q-ai-inference", default-features = false }
# prometheus crate removed: metrics.rs is now self-contained (issue #028)
# Crypto for tunnel handshake (X25519 key exchange + HKDF session key derivation)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
rayon = { workspace = true }
# Use rand 0.8 (not workspace 0.9) for compatibility with x25519-dalek's rand_core 0.6
rand = "0.8"
# Key zeroing for forward secrecy (Issue #024)
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_System_SystemInformation"] }
