[package]
name = "q-consensus-guard"
version = "1.0.0"
edition = "2021"
description = "Automatic consensus safety enforcement - makes mainnet corruption impossible"
authors = ["Q-NarwhalKnight Team"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha3 = "0.10"
tracing = "0.1"
once_cell = "1.19"
parking_lot = "0.12"
hex = "0.4"

# For proc macros
syn = { version = "2.0", features = ["full", "parsing"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = []
proc-macros = ["syn", "quote", "proc-macro2"]

[lib]
name = "q_consensus_guard"
path = "src/lib.rs"
