[package]
name = "q-cross-shard"
version = "0.1.0"
edition = "2021"
description = "Efficient cross-shard communication for Q-NarwhalKnight sharding architecture"
authors = ["Server Beta <server-beta@q-narwhalknight.dev>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lz4 = "1.24"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
parking_lot = "0.12"

# Q-NarwhalKnight dependencies
q-types = { path = "../q-types" }
q-network = { path = "../q-network" }

# Zero-copy and performance
bytes = "1.4"
crossbeam-channel = "0.5"